<resources>
    <string name="app_name">Kalkulator</string>
    <string name="Button_sqrt">\u221a</string>
    <string name="Button_ac">AC</string>
    <string name="Button_pi">\u03C0</string>
    <string name="Button_hat">\u005e</string>>
    <string name="Button_brackets">\u0028\u0029</string>
    <string name="Button_comma">\u002c</string>>
    <string name="Button_percent">\u0025</string>>
    <string name="Button_abs">\u007cx\u007c</string>>
    <string name="Button_div">\u002f</string>>
    <string name="Button_mul">\u002a</string>>
    <string name="Button_minus">-</string>>
    <string name="Button_plus">\u002b</string>>
    <string name="Button_equals">\u003d</string>>
    <string name="Button_del">del</string>>
    <string name="Button_fac">!</string>
    <string name="Button_inv">INV</string>>
    <string name="Button_sin">sin</string>>
    <string name="Button_cos">cos</string>>
    <string name="Button_e">\u0065</string>>
    <string name="Button_ln">ln</string>>
    <string name="Button_tan">tan</string>>
    <string name="Button_log">log</string>>
    <string name="Button_1">1</string>
    <string name="Button_2">2</string>
    <string name="Button_3">3</string>
    <string name="Button_4">4</string>
    <string name="Button_5">5</string>
    <string name="Button_6">6</string>
    <string name="Button_7">7</string>
    <string name="Button_8">8</string>
    <string name="Button_9">9</string>
    <string name="Button_0">0</string>
    <string name="button_Simple">Simple Calculator</string>
    <string name="button_Advanced">Advance Calculator</string>
    <string name="button_About">About</string>
    <string name="button_Exit">Exit</string>
    <string name="Button_asin">asin</string>
    <string name="Button_acos">acos</string>
    <string name="Button_atan">atan</string>
    <string name="Button_exp">e^x</string>
    <string name="Button_10x">10^x</string>


    <string name="author_name"> Created by: Kamil Ciepluch</string>
    <string name="release_date"> Release date: 19.03.2023 </string>string>

</resources>