<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".SimpleCalc">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/col1_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.11" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/col1_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.29" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/col2_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.31" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/col2_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.49" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/col3_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.51" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/col3_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.69" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/col4_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.71" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/col4_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.89" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/row_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/row_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/Buttons_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <LinearLayout
        android:id="@+id/first_col"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"

        app:layout_constraintTop_toBottomOf="@+id/Buttons_start"
        app:layout_constraintRight_toLeftOf="@+id/col1_end"
        app:layout_constraintBottom_toTopOf="@+id/row_end"
        app:layout_constraintLeft_toRightOf="@+id/col1_start"
        app:layout_constraintVertical_weight="1">


        <Button
            android:id="@+id/Button_sqrt"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            app:backgroundTint="@color/purple_700"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:textColor="@color/white"
            android:text="@string/Button_sqrt" />

        <Button
            android:id="@+id/Button_ac"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            app:backgroundTint="@color/purple_700"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:textColor="@color/white"
            android:text="@string/Button_ac" />

        <Button
            android:id="@+id/Button_7"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            app:backgroundTint="@color/purple_700"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:textColor="@color/white"
            android:text="@string/Button_7" />


        <Button
            android:id="@+id/Button_4"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            app:backgroundTint="@color/purple_700"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:textColor="@color/white"
            android:text="@string/Button_4" />

        <Button
            android:id="@+id/Button_1"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            app:backgroundTint="@color/purple_700"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:textColor="@color/white"
            android:text="@string/Button_1" />

        <Button
            android:id="@+id/Button_0"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            app:backgroundTint="@color/purple_700"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:textColor="@color/white"
            android:text="@string/Button_0" />
    </LinearLayout>




    <LinearLayout
        android:id="@+id/second_col"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"

        app:layout_constraintTop_toBottomOf="@+id/Buttons_start"
        app:layout_constraintRight_toLeftOf="@+id/col2_end"
        app:layout_constraintBottom_toTopOf="@+id/row_end"
        app:layout_constraintLeft_toRightOf="@+id/col2_start"
        app:layout_constraintVertical_weight="1">


        <Button
            android:id="@+id/Button_pi"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            app:backgroundTint="@color/purple_700"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:textColor="@color/white"
            android:text="@string/Button_pi" />

        <Button
            android:id="@+id/Button_brackets"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            app:backgroundTint="@color/purple_700"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:textColor="@color/white"
            android:text="@string/Button_brackets" />

        <Button
            android:id="@+id/Button_8"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            app:backgroundTint="@color/purple_700"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:textColor="@color/white"
            android:text="@string/Button_8" />


        <Button
            android:id="@+id/Button_5"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            app:backgroundTint="@color/purple_700"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:textColor="@color/white"
            android:text="@string/Button_5" />

        <Button
            android:id="@+id/Button_2"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            app:backgroundTint="@color/purple_700"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:textColor="@color/white"
            android:text="@string/Button_2" />

        <Button
            android:id="@+id/Button_comma"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            app:backgroundTint="@color/purple_700"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:textColor="@color/white"
            android:text="@string/Button_comma" />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/third_col"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/Buttons_start"
        app:layout_constraintRight_toLeftOf="@+id/col3_end"
        app:layout_constraintBottom_toTopOf="@+id/row_end"
        app:layout_constraintLeft_toRightOf="@+id/col3_start"
        app:layout_constraintVertical_weight="1">


        <Button
            android:id="@+id/Button_hat"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            app:backgroundTint="@color/purple_700"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:textColor="@color/white"
            android:text="@string/Button_hat" />

        <Button
            android:id="@+id/Button_percent"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            app:backgroundTint="@color/purple_700"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:textColor="@color/white"
            android:text="@string/Button_percent" />

        <Button
            android:id="@+id/Button_9"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            app:backgroundTint="@color/purple_700"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:textColor="@color/white"
            android:text="@string/Button_9" />


        <Button
            android:id="@+id/Button_6"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            app:backgroundTint="@color/purple_700"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:textColor="@color/white"
            android:text="@string/Button_6" />

        <Button
            android:id="@+id/Button_3"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            app:backgroundTint="@color/purple_700"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:textColor="@color/white"
            android:text="@string/Button_3" />

        <Button
            android:id="@+id/Button_del"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            app:backgroundTint="@color/purple_700"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:textColor="@color/white"
            android:text="@string/Button_del" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/fourth_col"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/Buttons_start"
        app:layout_constraintRight_toLeftOf="@+id/col4_end"
        app:layout_constraintBottom_toTopOf="@+id/row_end"
        app:layout_constraintLeft_toRightOf="@+id/col4_start"
        app:layout_constraintVertical_weight="1">

        <Button
            android:id="@+id/Button_abs"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            app:backgroundTint="@color/purple_700"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:textColor="@color/white"
            android:text="@string/Button_abs" />

        <Button
            android:id="@+id/Button_div"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            app:backgroundTint="@color/purple_700"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:textColor="@color/white"
            android:text="@string/Button_div" />

        <Button
            android:id="@+id/Button_mul"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            app:backgroundTint="@color/purple_700"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:textColor="@color/white"
            android:text="@string/Button_mul" />

        <Button
            android:id="@+id/Button_minus"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            app:backgroundTint="@color/purple_700"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:textColor="@color/white"
            android:text="@string/Button_minus" />


        <Button
            android:id="@+id/Button_plus"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            app:backgroundTint="@color/purple_700"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:textColor="@color/white"
            android:text="@string/Button_plus" />

        <Button
            android:id="@+id/Button_equals"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            app:backgroundTint="@color/purple_700"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:textColor="@color/white"
            android:text="@string/Button_equals" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="46sp"
        android:singleLine="true"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/row_start"
        app:layout_constraintRight_toLeftOf="@+id/col4_end"
        app:layout_constraintBottom_toTopOf="@+id/Buttons_start"
        app:layout_constraintLeft_toRightOf="@+id/col1_start"
        app:layout_constraintVertical_weight="1"/>





</androidx.constraintlayout.widget.ConstraintLayout>